GNOME Bugzilla – Bug 726420
Some strings aren't clear about what they mean
Last modified: 2014-04-07 15:53:10 UTC
The following strings don't get its meaning even after reading the tips: Charges may apply Software Source Identified Please rephrase them. Must be something easy-to-understand, like "Save the traffic" or so.
s/don't/I don't
commit 1a272f09fde75e6e6fcfa7a94a6184bf00d4eaa4 Author: Richard Hughes <richard@hughsie.com> Date: Mon Apr 7 16:52:57 2014 +0100 trivial: Update some translator comments Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=726420