trivial: Update some translator comments

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=726420